--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-dom": "^16.3.1"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^0.1.19",
     "concurrently": "^3.5.1",
     "css-loader": "^1.0.0",
@@ -36,6 +38,7 @@
     "nodemon": "^1.17.3",
     "style-loader": "^0.22.0",
     "url-loader": "^1.0.1",
+    "volleyball": "^1.5.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
